--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </fieldset>
     <fieldset>
       <legend>Bài 4</legend>
-      <input type="text" class="input-4" /><button onclick="bai_4()">
+     <button onclick="bai_4()">
         Sắp xếp
       </button>
       <p class="result_4"></p>
